# Note: keep this file in wiki format for easy pasting to the proto-ch wiki

= GENI Clearinghouse and Portal Release Notes =

== 1.4 ==
 * Clearinghouse
  * Check for valid arguments in more spots (#5)
  * Ensure more methods have guards, and log on failed authorization
  * Added sbin/renew-certs script to renew service certificates (#507)
  * Add support for GetVersion in pgch (#492)
  * Add a revoke privilege script (#549)
  * Fix up revoking project lead and operator privileges (#550)
  * Enable preliminary support for data handoff to GEMINI (#503)
  * Bug fix for changing project leads (#512)

== 1.3.1 ==
 * Add a missing copyright (#544)

== 1.3 ==
 * Start a CHANGELOG (#489)
 * Clearinghouse
   * Clean up privilege table (#493)
 * Portal
   * Displayed expired slices on project page but hidden by a button (#523) 
   * Allow removing members from projects, slices (#153)
   * Keys for all members included in createsliver (#248)
   * bulk add people to projects (#171)
   * slice membership (#58)
   * Allow adding known people to projects/slices (#86)
