@@ -12,6 +12,7 @@
   * Fix up revoking project lead and operator privileges (#550)
   * Enable preliminary support for data handoff to GEMINI (#503)
   * Bug fix for changing project leads (#512)
+  * Fix Changing Slice leads (#537)
 
 == 1.3.1 ==
  * Add a missing copyright (#544)
